# mirascope-type-error-example

./: .mypy.ini  README.md  main.py  pyproject.toml
